<resources>
    <string name="app_name">OlyAirONE</string>
    <string name="maChange_wifi">Change Wifi</string>
    <string name="title_activity_preferences">Preferences</string>
    <string name="mainTb_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="appsettings">AppSettings</string>
    <string name="ssid">NetworkName</string>
    <string name="pref_SharedPrefs">AirOnePrefs</string>
    <string name="pref_ssid">SSID</string>
    <string name="pref_Pw">Password</string>
    <string name="pref_enter_network_name">Enter Network Name</string>
    <string name="pref_network_name">Network Name</string>
    <string name="pref_ActivityLabel">App Settings</string>
    <string name="PreferenceFileKey">eu.buntepixel.www.olympusairone.PREFERENCE_FILE_KEY</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="title_activity_connect_to_cam">ConnectToCamActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="waitconnect">WaitConnect</string>
    <string name="title_activity_connect_to_cam_aktivity">Connect To Camera</string>
    <string name="connecting_to_camera">Connecting to Camera</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="ToastEnableWifi">Wifi not Enabled!\nPlease enable Wifi.</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="dialogue_ssid">SSID</string>
    <string name="dialogue_password">password</string>
    <string name="dialogue_Headline">Enter your Cameras Wifi SSID and Password</string>

    <!-- Camsettings -->
    <string name="camsettings_number_of_images">Number of Images</string>
    <string name="camsettings_exposure_spread">Exposure Spread</string>
    <string name="camsettings_aspectratio_txt">AspectRatio</string>

    <!-- ImageView -->
    <string name="action_info">info</string>
    <string name="action_refresh">refresh</string>
    <string name="action_download">download</string>
    <string name="action_delete">delete</string>
    <string name="action_download_original_size">Original Size</string>
    <string name="action_download_2048x1536">2048 x 1536</string>
    <string name="action_download_1920x1440">1920 x 1440</string>
    <string name="action_download_1600x1200">1600 x 1200</string>
    <string name="action_download_1024x768">1024 x 768</string>
    <string name="filesDeleted">files deleted on Camera</string>
    <string name="errorDeletingFile">Error deleting File on Cam</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dialogue_saveCred">Save Credentials</string>
    <string name="dialogue_cancel">Cancel</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="timelapse_total_number_images">Total Number Images</string>
    <string name="title_activity_image_view">ImageViewActivity</string>
    <string name="gv_ifo_deleting">Deleting</string>
    <string name="gv_ifo_downloading">Downloading</string>
    <string name="btn_camera">Camera</string>
    <string name="tl_alreadyTimelapsing">doing Timelapse already wait for it to finish</string>
    <string name="timelapse">Timelapse</string>
    <string name="timelapseInfoA">you\'re doing</string>
    <string name="timelapseInfoB">images with a  interval of</string>
    <string name="timelapseInfoC">seconds</string>
    <string name="timelapseInfo_btnPos">Start Timelapse</string>
    <string name="timelapseInfo_btnNeg">Cancel</string>
    <string name="timelapse_intervall_time">Intervall time</string>




</resources>
