<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	  xmlns:app="http://schemas.android.com/apk/res-auto">
	<item
		android:id="@+id/action_info"
		app:showAsAction="always"
		android:icon="@android:drawable/ic_menu_info_details"
		android:title="@string/action_info"
		android:visible="true" />
    <item android:id="@+id/action_download"
        app:showAsAction="always"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/action_download"
        android:visible="true" >
        <menu>
		    <item
		        android:id="@+id/action_download_original_size"
		        app:showAsAction="never"
		        android:title="@string/action_download_original_size"/>
		    
		    <item
		        android:id="@+id/action_download_2048x1536"
		        app:showAsAction="never"
		        android:title="@string/action_download_2048x1536"/>
		    
		    <item
		        android:id="@+id/action_download_1920x1440"
		        app:showAsAction="never"
		        android:title="@string/action_download_1920x1440"/>
		    
		    <item
		        android:id="@+id/action_download_1600x1200"
		        app:showAsAction="never"
		        android:title="@string/action_download_1600x1200"/>
		    
		    <item
		        android:id="@+id/action_download_1024x768"
		        app:showAsAction="never"
		        android:title="@string/action_download_1024x768"/>
        </menu>
    </item>

</menu>
