<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <item
        android:id="@+id/action_info"
        app:showAsAction="always"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/action_info"
        android:visible="true" />

    <item
        android:id="@+id/action_refresh"
        app:showAsAction="always"
        android:icon="@drawable/ic_menu_refresh"
        android:title="@string/action_refresh"
        android:visible="false" />
    <item
        android:id="@+id/action_download"
        app:showAsAction="always"
        android:icon="@drawable/ic_file_download_white_24dp"
        android:title="@string/action_download"
        android:visible="false" />

    <item
        android:id="@+id/action_delete"
        app:showAsAction="always"
        android:icon="@drawable/ic_delete_forever_white_24dp"
        android:title="@string/action_delete"
        android:visible="false"/>
    <item
        android:id="@+id/action_EndAction"
        app:showAsAction="always"
        android:icon="@drawable/ic_clear_white_24dp"
        android:title="@string/action_delete"
        android:visible="false"/>

</menu>
