<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView
        android:id="@+id/SettingsNetworkHeadline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/pref_wifinetwork"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/SettingsNetworkHeadline">

        <TextView
            android:id="@+id/tvSSID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_alignParentStart="true"
            android:text="@string/pref_ssid"/>

        <TextView
            android:id="@+id/tvPw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_below="@id/tvSSID"
            android:text="@string/pref_Pw"/>

        <EditText
            android:id="@+id/etPw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/tvPw"
            android:layout_toEndOf="@id/tvPw"
            android:layout_marginStart="@dimen/fab_margin"
            android:hint="@string/pref_Pw"/>

        <EditText
            android:id="@+id/etSsid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/tvSSID"
            android:layout_toRightOf="@id/tvPw"
            android:layout_marginStart="@dimen/fab_margin"
            android:hint="@string/pref_network_name"/>

    </RelativeLayout>

</RelativeLayout>